# Simple-text-editor

./: CMakeLists.txt  LICENSE  README.md  main.cpp
core/: codeeditor.cpp  codeeditor.h  linenum.h
core/highlighter/: c.h  cpp.h
ui/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  SettingsDialog.cpp  SettingsDialog.h  StatusBar.cpp  StatusBar.h  TerminalWidget.cpp  TerminalWidget.h
